# adr-skill

./: .gitignore  AGENTS.md  Makefile  README.md  TODOS.md  eval_queries.json  procedure-template.md  skill.toml  worksheet-template.md
.adr/: .gitignore  preferences.toml
architectural-decision-records/: Makefile  SKILL.md
architectural-decision-records/references/: templates.md
assets/: adr-reviewer.agent.md  gh-joelparkerhenderson-adr.md  index.md  nygard-documenting-architecture-decisions.md  ozimmer-seven-ad-fallacies.md  zdun-sustainable-architectural-decisions.md
assets/archive/: fabian-keller-documenting-ad.md  gh-adr-ad-guidance-tool.md  gh-adr-vscode-adr-manager.md  gh-backstage-adr-plugin.md  gh-canpolat-talo.md  gh-endjin-dotnet-adr.md  jacquiread-decision-making-weightings.md  ozimmer-adr-creation.md  ozimmer-architecture-decision-making.md  ozimmer-seven-ad-fallacies.md  reflectrally-homepage.md
assets/templates/: gh-adr-madr-minimal-template.md  gh-joelparkerhenderson-nygard-template.md  madr-full-template.md  nygard-template.md  y-statement-template.md
author-adr/: Makefile  SKILL.md
author-adr/assets/: SUPPLEMENTAL.md  adr-reviewer.agent.md
author-adr/references/: tooling.md
crates/: Cargo.toml
crates/adr-db/: Cargo.toml
crates/adr-db-lib/: Cargo.toml
crates/adr-db-lib/migrations/20260406000000_add_source_plan/: down.sql
crates/adr-db-lib/src/: db.rs  lib.rs
crates/adr-db-lib/src/remote/: gitea.rs
crates/adr-db/migrations/00000000000000_create_task_summaries/: down.sql  up.sql
crates/adr-db/migrations/20260406000000_add_source_plan/: up.sql
crates/adr-db/src/: ingest.rs  init.rs  main.rs  models.rs  schema.rs  view.rs
crates/adr-format/: Cargo.toml
crates/adr-format/src/: main.rs  schema.rs  template.rs
crates/adr-format/tests/: export_test.rs
doc/decisions/: 0001-record-architecture-decisions.md  0002-add-plan-from-adr-companion-skill.md
docs/: PREFERENCES.md  skilleton-case-study.md
docs/adr/: 0001-record-architecture-decisions.md  0002-add-implement-adr-companion-skill.md  0003-implement-adr-skill-updates-adr-status-during-planning.md  0004-author-adr-skill-recommends-reviewer-agent-for-consequence-validation.md  0005-store-implementation-plans-in-docs-plans-with-versioned-naming.md  0006-implement-adr-checks-user-participation-level-after-planning.md  0007-weighted-participation-mode-based-on-task-cost.md  0008-meta-adr-directory-for-skill-behavioral-policies.md  0009-implement-adr-uses-incremental-progress-tracking-during-plan-execution.md  0010-implement-adr-optionally-commits-on-task-completion.md  0012-use-toml-as-the-configuration-file-format.md  (+62 more)
implement-adr/: SKILL.md
references/: practices.md  tooling.md
scripts/: check-refs
src/crates/adr-db/: Cargo.toml
src/crates/adr-db-lib/: Cargo.toml
src/crates/adr-db-lib/src/: lib.rs  models.rs
src/crates/adr-db-lib/src/format/: mod.rs  schema.rs  template.rs
src/crates/adr-db-lib/src/remote/: mod.rs
src/crates/adr-db/src/: author.rs  fetch.rs  format.rs  ingest.rs  main.rs
src/crates/adr-db/tests/: export_test.rs
src/crates/adr-skills/: Cargo.toml  build.rs
src/crates/adr-skills/src/: embed.rs  init.rs  install.rs  main.rs  new_problem.rs
(+258 files in other folders)
