[package]
name = "adr-db"
version = "0.1.0"
edition = "2021"
description = "Plumbing CLI for ingesting JSONL data into a local SQLite database"

[dependencies]
clap = { version = "4", features = ["derive"] }
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
