[package]
name = "adr-format"
version = "0.1.0"
edition = "2021"
description = "CLI tool for the wi-full-agent-adr TOML format — create, list, rename, export ADRs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
