[package]
name = "adr-db"
version = "0.1.0"
edition = "2021"
description = "Plumbing CLI for ingesting JSONL data into a local SQLite database"

[dependencies]
adr-db-lib = { path = "../adr-db-lib" }
clap = { version = "4", features = ["derive"] }
diesel = { version = "2", features = ["sqlite"] }
serde_json = "1"

[dev-dependencies]
diesel_migrations = "2"
