[package]
name = "adr-skills"
version = "0.1.0"
edition = "2021"
description = "CLI for installing ADR skills and agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
dirs = "6"
ratatui = "0.29"
crossterm = "0.28"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
